--- a/ejercicioadmin.html
+++ b/ejercicioadmin.html
@@ -47,8 +47,8 @@
         }
       }
     </style>
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="assets/js/layout.js" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260207" />
+    <script src="assets/js/layout.js?v=20260207" type="module"></script>
   </head>
 
   <body data-page="ejercicioadmin">
