--- a/polityka-prywatnosci.html
+++ b/polityka-prywatnosci.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="assets/js/layout.js" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260207" />
+    <script src="assets/js/layout.js?v=20260207" type="module"></script>
   </head>
 
   <body data-page="privacy">
@@ -89,6 +89,7 @@
               <li>Firebase / Google (autenticación, base de datos, archivos),</li>
               <li>Stripe (pagos con tarjeta),</li>
               <li>Przelewy24 / PayPro S.A. (pagos P24),</li>
+              <li>PayPal (pagos PayPal),</li>
               <li>GitHub Pages (hosting del sitio).</li>
             </ul>
             Los datos se tratan de acuerdo con sus políticas de privacidad y los
