--- a/zwroty.html
+++ b/zwroty.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="assets/js/layout.js" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260207" />
+    <script src="assets/js/layout.js?v=20260207" type="module"></script>
   </head>
 
   <body data-page="returns">
@@ -23,48 +23,39 @@
             <div>
               <h1 class="glow-text" style="margin: 0">Devoluciones y desistimiento</h1>
               <div class="subtitle" style="margin-top: 6px">
-                Información sobre el derecho de desistimiento y la excepción
-                para contenidos digitales.
+                Información sobre el derecho de desistimiento y la excepción para contenidos
+                digitales.
               </div>
             </div>
           </div>
         </section>
 
-        <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">
-            Derecho de desistimiento (14 días)
+        <details class="card detailsCard" style="margin-top: 12px" open>
+          <summary class="sectionTitle">Derecho de desistimiento (14 días)</summary>
+          <div class="detailsBody muted">
+            De acuerdo con la normativa de la UE, el consumidor tiene derecho a desistir del
+            contrato celebrado a distancia en un plazo de 14 días sin indicar el motivo.
           </div>
-          <div class="muted">
-            De acuerdo con la normativa de la UE, el consumidor tiene derecho a
-            desistir del contrato celebrado a distancia en un plazo de 14 días
-            sin indicar el motivo.
-          </div>
-        </section>
+        </details>
 
-        <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">
-            Excepción para contenidos digitales
-          </div>
-          <div class="muted">
-            En el caso de la compra de contenidos digitales que se entregan
-            inmediatamente después de la compra, el derecho de desistimiento se
-            extingue en el momento en que el usuario obtiene acceso al contenido,
-            siempre que haya dado su consentimiento para la prestación inmediata
-            del servicio y haya sido informado de la pérdida del derecho de
-            desistimiento.
+        <details class="card detailsCard" style="margin-top: 12px">
+          <summary class="sectionTitle">Excepción para contenidos digitales</summary>
+          <div class="detailsBody muted">
+            En el caso de la compra de contenidos digitales que se entregan inmediatamente
+            después de la compra, el derecho de desistimiento se extingue en el momento en que
+            el usuario obtiene acceso al contenido, siempre que haya dado su consentimiento
+            para la prestación inmediata del servicio y haya sido informado de la pérdida del
+            derecho de desistimiento.
             <br /><br />
-            Al comprar acceso a los cursos y materiales de AquiVivo, aceptas la
-            prestación inmediata del servicio y reconoces que pierdes el derecho
-            de desistimiento una vez que obtengas acceso a los contenidos
-            digitales.
+            Al comprar acceso a los cursos y materiales de AquiVivo, aceptas la prestación
+            inmediata del servicio y reconoces que pierdes el derecho de desistimiento una vez
+            que obtengas acceso a los contenidos digitales.
           </div>
-        </section>
+        </details>
 
-        <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">
-            Servicios con cita (reprogramación y cancelación)
-          </div>
-          <div class="muted">
+        <details class="card detailsCard" style="margin-top: 12px">
+          <summary class="sectionTitle">Servicios con cita (reprogramación y cancelación)</summary>
+          <div class="detailsBody muted">
             Además de tus derechos legales, para Servicios que requieren agenda (por ejemplo,
             clases en vivo o acompañamiento), aplican estas reglas generales:
             <ul>
@@ -80,18 +71,16 @@
             Los detalles pueden variar si la oferta indica una regla distinta. La versión
             completa está en <a href="regulamin.html">Términos y condiciones</a>.
           </div>
-        </section>
+        </details>
 
-        <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">
-            Reclamaciones y contacto
-          </div>
-          <div class="muted">
+        <details class="card detailsCard" style="margin-top: 12px">
+          <summary class="sectionTitle">Reclamaciones y contacto</summary>
+          <div class="detailsBody muted">
             Para cualquier pregunta sobre devoluciones y reclamaciones, contáctanos en:
             <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>
             o por teléfono: <a href="tel:+48669697151">+48 669 697 151</a>.
           </div>
-        </section>
+        </details>
       </div>
     </main>
   </body>
