--- a/admin-select.html
+++ b/admin-select.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <title>Wybor tresci | Admin | AquiVivo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <script src="assets/js/layout.js" type="module"></script>
+  <link rel="stylesheet" href="assets/css/styles.css?v=20260207" />
+  <script src="assets/js/layout.js?v=20260207" type="module"></script>
 </head>
 <body data-page="admin-select">
   <div id="appHeader"></div>
