--- a/buscar.html
+++ b/buscar.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="assets/js/layout.js" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260207" />
+    <script src="assets/js/layout.js?v=20260207" type="module"></script>
   </head>
 
   <body data-page="buscar">
@@ -102,4 +102,3 @@
     <script type="module" src="assets/js/pages/buscar-page.js"></script>
   </body>
 </html>
-
