--- a/regulamin.html
+++ b/regulamin.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="assets/js/layout.js" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260207" />
+    <script src="assets/js/layout.js?v=20260207" type="module"></script>
   </head>
 
   <body data-page="terms">
@@ -122,7 +122,7 @@
               </li>
               <li>
                 <b>Proveedor de pagos</b>: Stripe y/o Przelewy24 (según lo disponible
-                al momento del pago).
+                al momento del pago) y/o PayPal.
               </li>
               <li>
                 <b>Política de privacidad</b>: la página “Política de privacidad”,
@@ -216,7 +216,7 @@
                 Términos y la Política de privacidad (por ejemplo, marcando una casilla).
               </li>
               <li>
-                Los pagos se procesan mediante Stripe y/o Przelewy24. Los métodos disponibles
+                Los pagos se procesan mediante Stripe, Przelewy24 y/o PayPal. Los métodos disponibles
                 dependen del Proveedor de pagos.
               </li>
               <li>
