--- a/lesson.html
+++ b/lesson.html
@@ -1,11 +1,11 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Lección | AquiVivo</title>
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260207" />
-    <script src="assets/js/layout.js?v=20260207" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208c" />
+    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
   </head>
   <body data-page="lesson">
     <div id="appHeader"></div>
@@ -30,3 +30,6 @@
     <!-- no page script on purpose -->
   </body>
 </html>
+
+
+
