--- a/esadmin.html
+++ b/esadmin.html
@@ -1,11 +1,11 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
     <title>Admin | AquiVivo</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="assets/css/styles.css?v=20260207" rel="stylesheet" />
-    <script src="assets/js/layout.js?v=20260207" type="module"></script>
+    <link href="assets/css/styles.css?v=20260208c" rel="stylesheet" />
+    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
   </head>
   <body data-page="esadmin">
     <div id="appHeader"></div>
@@ -1412,6 +1412,9 @@
     <script src="assets/js/pages/esadmin-page.js?v=20260206a" type="module"></script>
   </body>
 </html>
+
+
+
 
 
 
