--- a/referidos.html
+++ b/referidos.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260207" />
-    <script src="assets/js/layout.js?v=20260207" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208c" />
+    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
   </head>
 
   <body data-page="referidos">
@@ -42,3 +42,6 @@
     </main>
   </body>
 </html>
+
+
+
